# aoc2023

./: .gitignore  CMakeLists.txt  README.md
day01/: day01.c
utils/: CMakeLists.txt  read_input.c  read_input.h
